--- a/oe_kemexon_custom/report/aged_balance_report.xml
+++ b/oe_kemexon_custom/report/aged_balance_report.xml
@@ -14,17 +14,17 @@
                             <table class="table table-sm o_main_table" name="invoice_line_table">
                                 <thead>
                                     <tr>
-                                        <th t-esc="o.get_invoice_details().get('partner')"/>
-                                        <th>Reference</th>
-                                        <th>Currency</th>
-                                        <th>Due Date</th>
-                                        <th>Due Days</th>
-                                        <th>Total Amount</th>
-                                        <th>Balance</th>
-                                        <th>0-30 Days</th>
-                                        <th>31-60 Days</th>
-                                        <th>61-90 Days</th>
-                                        <th>Over 90 Days</th>
+                                        <th style="text-align:left;" t-esc="o.get_invoice_details().get('partner')"/>
+                                        <th style="text-align:left;">Reference</th>
+                                        <th style="text-align:left;">Currency</th>
+                                        <th style="text-align:left;">Due Date</th>
+                                        <th style="text-align:left;">Due Days</th>
+                                        <th style="text-align:right;">Total Amount</th>
+                                        <th style="text-align:right;">Balance</th>
+                                        <th style="text-align:right;">0-30 Days</th>
+                                        <th style="text-align:right;">31-60 Days</th>
+                                        <th style="text-align:right;">61-90 Days</th>
+                                        <th style="text-align:right;">Over 90 Days</th>
                                     </tr>
                                 </thead>
                                 <tbody>
