--- a/product_purchase_price/views/views.xml
+++ b/product_purchase_price/views/views.xml
@@ -6,7 +6,7 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']//tree//field[@name='product_uom_qty']" position="before">
-                    <field name="product_cost" context="{'check_cost': 1}"/>
+                    <field name="product_cost" context="{'check_cost': 1, 'product_id': product_id}"/>
                 </xpath>
             </field>
         </record>
