--- a/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
+++ b/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
@@ -4,17 +4,19 @@
         <field name="name">truck.transport.details</field>
         <field name="model">truck.transport.details</field>
         <field name="arch" type="xml">
-            <tree  multi_edit="1">
-                <field name="truck" />
+            <tree editable="bottom">
+                <field name="truck"/>
                 <field name="trailer"/>
                 <field name="driver"/>
                 <field name="passport"/>
                 <field name="nominated"/>
                 <field name="loaded"/>
-                <field name="offloaded"/>
+                <field name="offloaded" attrs="{'readonly': [('is_updated', '=', True)]}" force_save="1"/>
                 <field name="status"/>
                 <field name="statusdate"/>
-                <field name="is_add_report"/>
+                <field name="is_updated" invisible="1"/>
+<!--                <button name="action_update_qty" type="object" string="Update Qty"/>-->
+                <button name="action_print_report" type="object" string="Print"/>
             </tree>
         </field>
     </record>
@@ -24,18 +26,17 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                        <group>
-                            <field name="truck" />
-                            <field name="trailer"/>
-                            <field name="driver"/>
-                            <field name="passport"/>
-                            <field name="nominated"/>
-                            <field name="loaded"/>
-                            <field name="offloaded"/>
-                            <field name="status"/>
-                            <field name="statusdate"/>
-                            <field name="is_add_report"/>
-                        </group>
+                    <group>
+                        <field name="truck"/>
+                        <field name="trailer"/>
+                        <field name="driver"/>
+                        <field name="passport"/>
+                        <field name="nominated"/>
+                        <field name="loaded"/>
+                        <field name="offloaded"/>
+                        <field name="status"/>
+                        <field name="statusdate"/>
+                    </group>
                 </sheet>
             </form>
         </field>
